<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="#FFFFFF"
    android:id="@+id/mainCard"
    card_view:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/offer_image"
            android:contentDescription="@string/image_contentDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickOpenDetailsPage"
            android:src="@mipmap/ocean_world"
            android:scaleType="centerCrop"
            android:background="#FAFAFA"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="#FAFAFA">
            <LinearLayout
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/offer_title"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="@string/offer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/offer_likesNumber"
                    android:text="@string/offer_subtitle"
                    android:textColor="#9E9E9E"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/deck_btns_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/left_side_card_btns"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:text="@string/like_button"
                        android:contentDescription="@string/image_contentDescription"
                        android:id="@+id/likeButton"
                        android:elevation="0dp"
                        android:backgroundTint="#FAFAFA"
                        android:src="@mipmap/ic_favorite_grey_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageButton
                        android:text="@string/comment_button"
                        android:contentDescription="@string/image_contentDescription"
                        android:id="@+id/commentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="0dp"
                        android:src="@mipmap/ic_mode_comment_black_24dp"
                        android:backgroundTint="#FAFAFA"/>
                    <ImageButton
                        android:text="@string/share_button"
                        android:contentDescription="@string/image_contentDescription"
                        android:onClick="onClickShare"
                        android:id="@+id/shareButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="0dp"
                        android:src="@mipmap/ic_share_black_24dp"
                        android:backgroundTint="#FAFAFA"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/right_side_card_btns"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/left_side_card_btns"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp">
                    <TextView
                        android:text="$25"
                        android:textColor="#FF6F00"
                        android:textStyle="bold"
                        android:textSize="28sp"
                        android:id="@+id/offer_price"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>